fix(header): z-index increase

--- a/components/src/patterns/header/header.scss
+++ b/components/src/patterns/header/header.scss
@@ -49,7 +49,7 @@
   background-color: var(--sdds-blue-800);
   height: 64px;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
   display: flex;
   justify-content: space-between;
 }
